add java.xml.bind module to tests